Update container3D height and add position style

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,6 @@ header h1 {
 
 #container3D {
   width: 100%;
-  height: 500px;
-  background: red; /* temporary test */
+  height: 100vh;
+  position: relative;
 }
