--- a/css/style.css
+++ b/css/style.css
@@ -15,17 +15,17 @@ header h1 {
   font-weight: 900;
 }
 
-/* #container3D canvas {
+#container3D canvas {
   width: 100vw !important;
   height: 100vh !important;
   position: absolute;
   top: 0;
   left: 0;
-} */
+}
 
-#container3D {
+/* #container3D {
   width: 100%;
   height: 100vh;
   position: relative;
   background: red; /* temporary test */
-}
+} */
