--- a/css/style.css
+++ b/css/style.css
@@ -27,5 +27,5 @@ header h1 {
   width: 100%;
   height: 100vh;
   position: relative;
-  background: red; /* temporary test */
+  background: red; /* temporary test
 } */
