--- a/css/style.css
+++ b/css/style.css
@@ -26,5 +26,5 @@ header h1 {
 #container3D {
   width: 500px;
   height: 500px;
-  background: red; /* temporary test */
+  background: blue; /* temporary test */
 }
